# PDEPack-Ferjani

./: README.md
HTML DOCU/: readme.md
VTK DATA/: Loesung-sor-openmp.vtk  readme.md
examples/: CMakeLists.txt
examples/Solution/: CMakeLists.txt  kuehlrippeTest.cpp
kernel/include/: Resolve.h
kernel/src/: Resolve.cpp
